maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  while (!estSurBiscuit) {
    keepHandOnSide()
  }
  prendBiscuit()
  
  
}
def keepHandOnSideWall() {
  gauche()
  while (estFaceMur) {
    droite()
  }
  avance()
}